ReferenceType creation
