# server/src/db/referencetypes.ts
@@ -8,8 +8,31 @@ import { Sequelize } from "database";
 import { ReferenceType } from "models";
 import { ReferenceTypeFetchOpts } from "types/referencetype";
 
-/*
-  Fetch all reference types. Uses query parameters to opt-in on reference count.
+type ReferenceTypeData = {
+  name: string;
+  description: string;
+  notes?: string | null;
+};
+
+/**
+ * Adds a reference type to the database.
+ *
+ * @param data - The reference type data to be added.
+ * @returns A promise that resolves to the created reference type.
+ */
+export function addReferenceType(
+  data: ReferenceTypeData
+): Promise<ReferenceType> {
+  return ReferenceType.create(data);
+}
+
+/**
+ * Fetches all reference types with additional data based on the provided
+ * options.
+ *
+ * @param opts - The options for fetching reference types' additional data.
+ * @returns A promise that resolves to an array of reference types.
+ * @throws If there is an error while fetching the reference types.
  */
 export function fetchAllReferenceTypes(
   opts: ReferenceTypeFetchOpts
@@ -35,9 +58,15 @@ export function fetchAllReferenceTypes(
   });
 }
 
-/*
-  Fetch a single reference type by ID. Uses query parameters to opt-in on
-  reference count.
+/**
+ * Fetches a single reference type by ID with additional data based on the
+ * provided options.
+ *
+ * @param id - The ID of the reference type to fetch.
+ * @param opts - The options for fetching the reference type's additional data.
+ * @returns A promise that resolves to the fetched reference type or null if
+ * not found.
+ * @throws If there is an error while fetching the reference type.
  */
 export function fetchOneReferenceType(
   id: number,
